[project]
name = "ml-playground"
version = "0.1.0"
description = "ML playground with monorepo setup"
# Upgraded to PyTorch 2.6.0+ to address critical security vulnerabilities
# Note: mmpretrain and mmdetection submodules may require updated versions
# to work with PyTorch 2.6+. Test compatibility before using submodules.
requires-python = ">=3.9,<3.13"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.19.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
