[project]
name = "ml-playground"
version = "0.1.0"
description = "ML playground with monorepo setup"
# Upgraded to PyTorch 2.6.0+ to address critical security vulnerabilities
# Note: mmpretrain and mmdetection submodules may require updated versions
# to work with PyTorch 2.6+. Test compatibility before using submodules.
requires-python = ">=3.9,<3.13"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.19.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.workspace]
members = [
    "packages/coco_s3_loader",
    "packages/data-processing",
    "packages/playground",
    "packages/self-sup-learning",
    "packages/visualization",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
